# internal/http/api/types.gen.go
@@ -1,0 +1,65 @@
+// Package api provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+package api
+
+import (
+	"time"
+)
+
+const (
+	ApiKeyAuthScopes = "ApiKeyAuth.Scopes"
+)
+
+// Defines values for OrderStatus.
+const (
+	INVALID    OrderStatus = "INVALID"
+	NEW        OrderStatus = "NEW"
+	PROCESSED  OrderStatus = "PROCESSED"
+	PROCESSING OrderStatus = "PROCESSING"
+)
+
+// Order defines model for Order.
+type Order struct {
+	Accrual    *string     `json:"accrual,omitempty"`
+	Number     int         `json:"number"`
+	Status     OrderStatus `json:"status"`
+	UploadedAt time.Time   `json:"uploaded_at"`
+}
+
+// OrderStatus defines model for Order.Status.
+type OrderStatus string
+
+// User defines model for User.
+type User struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
+
+// Withdrawal defines model for Withdrawal.
+type Withdrawal struct {
+	Order       int       `json:"order"`
+	ProcessedAt time.Time `json:"processed_at"`
+	Sum         string    `json:"sum"`
+}
+
+// WithdrawJSONBody defines parameters for Withdraw.
+type WithdrawJSONBody struct {
+	Order int    `json:"order"`
+	Sum   string `json:"sum"`
+}
+
+// CreateOrderTextBody defines parameters for CreateOrder.
+type CreateOrderTextBody = string
+
+// WithdrawJSONRequestBody defines body for Withdraw for application/json ContentType.
+type WithdrawJSONRequestBody WithdrawJSONBody
+
+// LoginUserJSONRequestBody defines body for LoginUser for application/json ContentType.
+type LoginUserJSONRequestBody = User
+
+// CreateOrderTextRequestBody defines body for CreateOrder for text/plain ContentType.
+type CreateOrderTextRequestBody = CreateOrderTextBody
+
+// RegisterUserJSONRequestBody defines body for RegisterUser for application/json ContentType.
+type RegisterUserJSONRequestBody = User
